toolchain/internal/core/analysis/testdata/errors/enums/duplicate_value.vdl
// @expect: E303

enum Status {
  Active = "active"
  Pending = "active"
}
